--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+dython >= 0.7.9
+matplotlib >= 3.10.0
 notebook >= 7.3.2
+numpy >= 2.2.3
+pandas >= 2.2.3
+scikit-learn >= 1.6.1
+scipy >= 1.15.1
+seaborn >= 0.13.2
+torch >= 2.6.0
+torchmetrics >= 1.6.1
+tqdm >= 4.67.1
